--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -1,18 +1,25 @@
 ﻿{
-    "Logging": {
-        "IncludeScopes": false,
-        "Debug": {
-            "LogLevel": {
-                "Default": "Warning"
-            }
-        },
-        "Console": {
-            "LogLevel": {
-                "Default": "Warning"
-            }
-        }
+  "Logging": {
+    "IncludeScopes": false,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     },
+    "Console": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    }
+  },
 
-    "ConnectionString": "server=localhost;port=3306;database=test-ideo-q;user=root;SslMode=none;"
+  "ConnectionString": "server=localhost;port=3306;database=test-ideo-q;user=root;SslMode=none;",
+
+
+  "ColorMapping": {
+    "Black Floral": "Black",
+    "Black white": "black,white"
+  }
+
 
 }
