закончил, надо тестить

--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -15,6 +15,10 @@
 
   "ConnectionString": "server=localhost;port=3306;database=test-ideo-q;user=root;SslMode=none;",
 
+  "UnknownColoursFile": "results/unknownColours.txt",
+  "ResultFile": "results/result.txt",
+
+  "FColours": ["black", "white", "grey"],
 
   "ColorMapping": {
     "Black Floral": "Black",
