--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -15,10 +15,12 @@
 
   "ConnectionString": "server=localhost;port=3306;database=test-ideo-q;user=root;SslMode=none;",
 
+  "SaveResult":  false,
+
   "UnknownColoursFile": "results/unknownColours.txt",
   "ResultFile": "results/result.txt",
 
-  "FColours": ["black", "white", "grey"],
+  "FColours": ["black", "white", "grey", "gold", "brown", "pink"],
 
   "ColorMapping": {
     "Black Floral": "Black",
