--- a/converter/Converter/nlog.config
+++ b/converter/Converter/nlog.config
@@ -13,12 +13,11 @@
     <!--<target xsi:type="File" name="target1" fileName="c:\temp\console-example.log"
             layout="${date}|${level:uppercase=true}|${message} ${exception}|${logger}|${all-event-properties}" />-->
 
-    <target name="target1" xsi:type="File" layout="${time} ${level} ${message}" 
+    <target name="target1" xsi:type="File" layout="${date} ${level:uppercase=true} ${message}" 
             fileName="${basedir}/logs/${shortdate}.txt" archiveFileName="${basedir}/logs/${shortdate}.{#}.txt" 
             archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="30" concurrentWrites="true" keepFileOpen="false" encoding="utf-8" />
     
-    <target xsi:type="Console" name="target2"
-            layout="${date}|${level:uppercase=true}|${message} ${exception}|${logger}|${all-event-properties}" />
+    <target xsi:type="Console" name="target2" layout="${date} ${level:uppercase=true} ${message} ${exception}" />
 
 
   </targets>
