--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -15,24 +15,32 @@
 
   "ConnectionString": "server=localhost;port=3306;database=test-ideo-q;user=root;SslMode=none;",
 
-  "DeleteAllFColours": true,
+  "SizeConverter": {
 
-  "SaveResult": true,
+  },
 
-  "UnknownColoursFile": "results/unknownColours.txt",
-  "ResultFile": "results/result.txt",
 
-  "FColours": [ "one color", "black", "white", "grey", "gold", "brown", "pink", "beige", "blue", "silver", "red", "green", "yellow" ],
+  "ColorConverter": {
+    "DeleteAllFColours": true,
 
-  "ColorMapping": {
-    "Black Floral": "Black",
-    "Black white": "black,white",
-    "cognac": "brown",
-    "charcoal": "black",
-    "coffee": "black",
-    "aqua": "blue",
-    "gray": "grey",
-    "ivory":  "white"
+    "SaveResult": true,
+
+    "UnknownColoursFile": "results/unknownColours.txt",
+    "ResultFile": "results/result.txt",
+
+    "FColours": [ "one color", "black", "white", "grey", "gold", "brown", "pink", "beige", "blue", "silver", "red", "green", "yellow" ],
+
+    "ColorMapping": 
+    {
+      "Black Floral": "Black",
+      "Black white": "black,white",
+      "cognac": "brown",
+      "charcoal": "black",
+      "coffee": "black",
+      "aqua": "blue",
+      "gray": "grey",
+      "ivory": "white"
+    }
   }
 
 
