настройки для SizeConverter

--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -16,6 +16,7 @@
   "ConnectionString": "server=localhost;port=3306;database=test-ideo-q;user=root;SslMode=none;",
 
   "SizeConverter": {
+    "ShoesCategories": [ "shoes" ]
 
   },
 
