настройки для sizeКонвертера

--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -16,33 +16,82 @@
   "ConnectionString": "server=localhost;port=3306;database=test-ideo-q;user=root;SslMode=none;",
 
   "SizeConverter": {
-    "ShoesCategories": [ "shoes" ]
 
+    "SizeCharts": {
+      "WomenShoes": [
+        {
+          "us": "4",
+          "uk": "2",
+          "eur": "35"
+        },
+        {
+          "us": "4.5",
+          "uk": "2.5",
+          "eur": "35"
+        },
+        {
+          "us": "5",
+          "uk": "3",
+          "eur": "35-36"
+        }
+      ],
+
+      "WomenСlothes": [
+        {
+          "universal": "xs",
+          "us": "1",
+          "uk": "4",
+          "eur": "32"
+        },
+        {
+          "universal": "xs",
+          "us": "2",
+          "uk": "6",
+          "eur": "34"
+        },
+        {
+          "universal": "s",
+          "us": "4",
+          "uk": "8",
+          "eur": "36"
+        }
+      ]
+    },
+
+    "SizeChartBindings": [
+      {
+        "Categories": [ "Shoes" ],
+        "SizeChart": "WomenShoes"
+      },
+      {
+        "Categories": [ "Dresses", "Women" ],
+        "SizeChart": "WomenСlothes"
+      }
+    ]
   },
 
 
-  "ColorConverter": {
-    "DeleteAllFColours": true,
+    "ColorConverter": {
+      "DeleteAllFColours": true,
 
-    "SaveResult": true,
+      "SaveResult": true,
 
-    "UnknownColoursFile": "results/unknownColours.txt",
-    "ResultFile": "results/result.txt",
+      "UnknownColoursFile": "results/unknownColours.txt",
+      "ResultFile": "results/result.txt",
 
-    "FColours": [ "one color", "black", "white", "grey", "gold", "brown", "pink", "beige", "blue", "silver", "red", "green", "yellow" ],
+      "FColours": [ "one color", "black", "white", "grey", "gold", "brown", "pink", "beige", "blue", "silver", "red", "green", "yellow" ],
 
-    "ColorMapping": 
-    {
-      "Black Floral": "Black",
-      "Black white": "black,white",
-      "cognac": "brown",
-      "charcoal": "black",
-      "coffee": "black",
-      "aqua": "blue",
-      "gray": "grey",
-      "ivory": "white"
+      "ColorMapping": {
+        "Black Floral": "Black",
+        "Black white": "black,white",
+        "cognac": "brown",
+        "charcoal": "black",
+        "coffee": "black",
+        "aqua": "blue",
+        "gray": "grey",
+        "ivory": "white"
+      }
     }
+
+
   }
-
-
-}
