заготовка для конвертации

--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -64,7 +64,7 @@
         "SizeChart": "WomenShoes"
       },
       {
-        "Categories": [ "Dresses", "Women" ],
+        "Categories": [ "Dresses" ],
         "SizeChart": "WomenСlothes"
       }
     ]
