--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -17,6 +17,9 @@
 
   "SizeConverter": {
 
+    "UnknownFile": "results/unknownSizes.txt",
+    "ResultFile": "results/convertedSizes.txt",
+
     "SizeCharts": {
       "WomenShoes": [
         {
@@ -76,8 +79,8 @@
 
       "SaveResult": true,
 
-      "UnknownColoursFile": "results/unknownColours.txt",
-      "ResultFile": "results/result.txt",
+      "UnknownFile": "results/unknownColors.txt",
+      "ResultFile": "results/convertedColors.txt",
 
       "FColours": [ "one color", "black", "white", "grey", "gold", "brown", "pink", "beige", "blue", "silver", "red", "green", "yellow" ],
 
