--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -17,6 +17,8 @@
 
   "SizeConverter": {
 
+    "SaveResult": true,
+
     "UnknownFile": "results/unknownSizes.txt",
     "ResultFile": "results/convertedSizes.txt",
 
