--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -17,7 +17,7 @@
 
   "SizeConverter": {
 
-    "SaveResult": true,
+    "SaveResult": false,
 
     "UnknownFile": "results/unknownSizes.txt",
     "ResultFile": "results/convertedSizes.txt",
