--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -24,42 +24,16 @@
 
     "SizeCharts": {
       "WomenShoes": [
-        {
-          "us": "4",
-          "uk": "2",
-          "eur": "35"
-        },
-        {
-          "us": "4.5",
-          "uk": "2.5",
-          "eur": "35"
-        },
-        {
-          "us": "5",
-          "uk": "3",
-          "eur": "35-36"
-        }
+        { "us": "4",    "uk": "2",    "eur": "35" },
+        { "us": "4.5",  "uk": "2.5",  "eur": "35" },
+        { "us": "5",    "uk": "3",    "eur": "35-36" }
       ],
 
       "WomenСlothes": [
-        {
-          "universal": "xs",
-          "us": "1",
-          "uk": "4",
-          "eur": "32"
-        },
-        {
-          "universal": "xs",
-          "us": "2",
-          "uk": "6",
-          "eur": "34"
-        },
-        {
-          "universal": "s",
-          "us": "4",
-          "uk": "8",
-          "eur": "36"
-        }
+        { "universal": "xs", "us": "1", "uk": "4",  "eur": "32" },
+        { "universal": "xs", "us": "2", "uk": "6",  "eur": "34" },
+        { "universal": "s",  "us": "4", "uk": "8",  "eur": "36" },
+        { "universal": "m",  "us": "8", "uk": "12", "eur": "40" }
       ]
     },
 
@@ -69,7 +43,7 @@
         "SizeChart": "WomenShoes"
       },
       {
-        "Categories": [ "Dresses" ],
+        "Categories": [ "Dresses", "shirts" ],
         "SizeChart": "WomenСlothes"
       }
     ]
