--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -24,16 +24,19 @@
 
     "SizeCharts": {
       "WomenShoes": [
-        [ "us 4", "uk 2", "eur 35" ],
-        [ "us 4.5", "uk2.5", "eur35" ],
+        [ "us4", "uk 2", "eur 35" ],
+        [ "us4.5", "uk2.5", "eur35" ],
         [ "us5", "uk3", "eur35-36" ]
       ],
 
       "WomenСlothes": [
-        [ "xs", "us1", "uk4",  "eur32" ],
-        [ "xs", "us2", "uk6",  "eur34" ],
-        [ "s",  "us4", "uk8",  "eur36" ],
-        [ "m",  "us8", "uk12", "eur40" ]
+        [ "xs", "us1", "uk4", "eur32" ],
+        [ "xs", "us2", "uk6", "eur34" ],
+        [ "s", "us4", "uk8", "eur36" ],
+        [ "m", "us8", "uk12", "eur40" ],
+        [ "m", "us10", "uk14", "eur42" ],
+        [ "l", "us12", "uk16", "eur44" ],
+        [ "l", "us16", "uk18", "eur46" ]
       ]
     },
 
@@ -46,31 +49,36 @@
         "Categories": [ "Dresses", "apparel" ],
         "SizeChart": "WomenСlothes"
       }
-    ]
+    ],
+
+    "DirectMapping": {
+      "one size": "one size",
+      "uk 30d / us 30d": "uk 30d,us 30d,eur 65d"
+    }
   },
 
 
-    "ColorConverter": {
-      "DeleteAllFColours": true,
+  "ColorConverter": {
+    "DeleteAllFColours": true,
 
-      "SaveResult": true,
+    "SaveResult": true,
 
-      "UnknownFile": "results/unknownColors.txt",
-      "ResultFile": "results/convertedColors.txt",
+    "UnknownFile": "results/unknownColors.txt",
+    "ResultFile": "results/convertedColors.txt",
 
-      "FColours": [ "one color", "black", "white", "grey", "gold", "brown", "pink", "beige", "blue", "silver", "red", "green", "yellow" ],
+    "FColours": [ "one color", "black", "white", "grey", "gold", "brown", "pink", "beige", "blue", "silver", "red", "green", "yellow" ],
 
-      "ColorMapping": {
-        "Black Floral": "Black",
-        "Black white": "black,white",
-        "cognac": "brown",
-        "charcoal": "black",
-        "coffee": "black",
-        "aqua": "blue",
-        "gray": "grey",
-        "ivory": "white"
-      }
+    "DirectMapping": {
+      "Black Floral": "Black",
+      "Black white": "black,white",
+      "cognac": "brown",
+      "charcoal": "black",
+      "coffee": "black",
+      "aqua": "blue",
+      "gray": "grey",
+      "ivory": "white"
     }
+  }
 
 
   }
