--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -23,13 +23,13 @@
     "ResultFile": "results/convertedSizes.txt",
 
     "SizeCharts": {
-      "WomenShoes": [
+      "women_shoes": [
         [ "us4", "uk 2", "eur 35" ],
         [ "us4.5", "uk2.5", "eur35" ],
         [ "us5", "uk3", "eur35-36" ]
       ],
 
-      "WomenСlothes": [
+      "women_clothes": [
         [ "xs", "us1", "uk4", "eur32" ],
         [ "xs", "us2", "uk6", "eur34" ],
         [ "s", "us4", "uk8", "eur36" ],
@@ -37,17 +37,42 @@
         [ "m", "us10", "uk14", "eur42" ],
         [ "l", "us12", "uk16", "eur44" ],
         [ "l", "us16", "uk18", "eur46" ]
+      ],
+
+      "bra_sizes": [
+        [ "us28", "uk28", "eur60" ],
+        [ "us30", "uk30", "eur65" ],
+        [ "us32", "uk32", "eur70" ],
+        [ "us34", "uk34", "eur75" ],
+        [ "us36", "uk36", "eur80" ],
+        [ "us38", "uk38", "eur85" ],
+        [ "us40", "uk40", "eur90" ],
+        [ "us42", "uk42", "eur95" ],
+        [ "us44", "uk44", "eur100" ],
+        [ "us46", "uk46", "eur105" ],
+        [ "us48", "uk48", "eur110" ],
+        [ "us50", "uk50", "eur115" ]
+
+      ],
+
+      "cup_size": [
+        [ "usAA", "ukAA", "eurAA" ],
+        [ "usA", "ukA", "eurA" ],
+        [ "usB", "ukB", "eurB" ],
+        [ "usC", "ukC", "eurD" ],
+        [ "usDD", "ukDD", "eurE" ],
+        [ "usE", "ukE", "eurF" ]
       ]
     },
 
     "SizeChartBindings": [
       {
         "Categories": [ "Shoes" ],
-        "SizeChart": "WomenShoes"
+        "SizeChart": "women_shoes"
       },
       {
         "Categories": [ "Dresses", "apparel" ],
-        "SizeChart": "WomenСlothes"
+        "SizeChart": "women_clothes"
       }
     ],
 
