--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -55,13 +55,13 @@
 
       ],
 
-      "cup_size": [
+      "cup_sizes": [
         [ "usAA", "ukAA", "eurAA" ],
-        [ "usA", "ukA", "eurA" ],
-        [ "usB", "ukB", "eurB" ],
-        [ "usC", "ukC", "eurD" ],
+        [ "usA",  "ukA",  "eurA" ],
+        [ "usB",  "ukB",  "eurB" ],
+        [ "usC",  "ukC",  "eurD" ],
         [ "usDD", "ukDD", "eurE" ],
-        [ "usE", "ukE", "eurF" ]
+        [ "usE",  "ukE",  "eurF" ]
       ]
     },
 
