--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -77,8 +77,7 @@
     ],
 
     "DirectMapping": {
-      "one size": "one size",
-      "uk 30d / us 30d": "uk 30d,us 30d,eur 65d"
+      "one size": "one size"
     }
   },
 
