--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -17,6 +17,8 @@
 
   "SizeConverter": {
 
+    "DeleteAllFSizes": true,
+
     "SaveResult": false,
 
     "UnknownFile": "results/unknownSizes.txt",
@@ -57,11 +59,11 @@
 
       "cup_sizes": [
         [ "usAA", "ukAA", "eurAA" ],
-        [ "usA",  "ukA",  "eurA" ],
-        [ "usB",  "ukB",  "eurB" ],
-        [ "usC",  "ukC",  "eurD" ],
+        [ "usA", "ukA", "eurA" ],
+        [ "usB", "ukB", "eurB" ],
+        [ "usC", "ukC", "eurD" ],
         [ "usDD", "ukDD", "eurE" ],
-        [ "usE",  "ukE",  "eurF" ]
+        [ "usE", "ukE", "eurF" ]
       ]
     },
 
@@ -83,7 +85,7 @@
 
 
   "ColorConverter": {
-    "DeleteAllFColours": true,
+    "DeleteAllFColours": false,
 
     "SaveResult": true,
 
