--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -16,29 +16,63 @@
   "ConnectionString": "server=localhost;port=3306;database=test-ideo-q;user=root;SslMode=none;",
 
   "SizeConverter": {
-
+    "IsEnabled": true,
     "DeleteAllFSizes": true,
 
-    "SaveResult": false,
+    "SaveResult": true,
 
     "UnknownFile": "results/unknownSizes.txt",
     "ResultFile": "results/convertedSizes.txt",
 
     "SizeCharts": {
-      "women_shoes": [
-        [ "us4", "uk 2", "eur 35" ],
-        [ "us4.5", "uk2.5", "eur35" ],
-        [ "us5", "uk3", "eur35-36" ]
-      ],
 
       "women_clothes": [
         [ "xs", "us1", "uk4", "eur32" ],
         [ "xs", "us2", "uk6", "eur34" ],
         [ "s", "us4", "uk8", "eur36" ],
+        [ "s", "us6", "uk10", "eur38" ],
         [ "m", "us8", "uk12", "eur40" ],
         [ "m", "us10", "uk14", "eur42" ],
         [ "l", "us12", "uk16", "eur44" ],
-        [ "l", "us16", "uk18", "eur46" ]
+        [ "l", "us14", "uk18", "eur46" ],
+        [ "xl", "us16", "uk20", "eur48" ],
+        [ "xl", "us18", "uk22", "eur50" ],
+        [ "xxl", "us20", "uk24", "eur52" ],
+        [ "xxl", "us22", "uk26", "eur54" ]
+      ],
+
+      "women_shoes": [
+        [ "us4", "uk 2", "eur 35" ],
+        [ "us4.5", "uk2.5", "eur35" ],
+        [ "us5", "uk3", "eur35-36" ],
+        [ "us5.5", "uk3.5", "eur36" ],
+        [ "us6", "uk4", "eur36-37" ],
+        [ "us6.5", "uk4.5", "eur37" ],
+        [ "us7", "uk5", "eur37-38" ],
+        [ "us7.5", "uk5.5", "eur38" ],
+        [ "us8", "uk6", "eur38-39" ],
+        [ "us8.5", "uk6.5", "eur39" ],
+        [ "us9", "uk7", "eur39-40" ],
+        [ "us9.5", "uk7.5", "eur40" ],
+        [ "us10", "uk8", "eur40-41" ],
+        [ "us10.5", "uk8.5", "eur41" ],
+        [ "us11", "uk9", "eur41-42" ],
+        [ "us11", "uk9.5", "eur42" ]
+      ],
+
+      "women_jeans": [
+        [ "xs", "us0", "uk2", "eur30" ],
+        [ "xs", "us2", "uk4", "eur32" ],
+        [ "s", "us4", "uk6", "eur34" ],
+        [ "s", "us6", "uk8", "eur36" ],
+        [ "m", "us8", "uk10", "eur38" ],
+        [ "m", "us10", "uk12", "eur40" ],
+        [ "l", "us12", "uk14", "eur42" ],
+        [ "l", "us14", "uk16", "eur44" ],
+        [ "xl", "us16", "uk18", "eur46" ],
+        [ "xl", "us18", "uk20", "eur48" ],
+        [ "xxl", "us20", "uk22", "eur50" ],
+        [ "xxl", "us22", "uk24", "eur52" ]
       ],
 
       "bra_sizes": [
@@ -73,18 +107,29 @@
         "SizeChart": "women_shoes"
       },
       {
+        "Categories": [ "jeans" ],
+        "SizeChart": "women_jeans"
+      },
+
+      {
         "Categories": [ "Dresses", "apparel" ],
         "SizeChart": "women_clothes"
       }
     ],
 
     "DirectMapping": {
-      "one size": "one size"
+      "one size": "one size",
+      "x-large": "xl",
+      "xxlarge": "xxl",
+      "xsmall": "xs",
+
+      "10(m)": "10_m_"
     }
   },
 
 
   "ColorConverter": {
+    "IsEnabled": false,
     "DeleteAllFColours": false,
 
     "SaveResult": true,
