--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -13,7 +13,9 @@
     }
   },
 
-  "ConnectionString": "server=localhost;port=3306;database=test-ideo-q;user=root;SslMode=none;",
+  "TablePrefix": "wptj_",
+  "ConnectionString": "server=69.164.214.144;port=3306;database=ideo-q-wp-XoluqycZ;user=fHUcdltH5uLe;password=da28i7^4J#p*AmNyjh8&;SslMode=none;",
+
 
   "SizeConverter": {
     "IsEnabled": true,
@@ -120,16 +122,21 @@
     "DirectMapping": {
       "one size": "one size",
       "x-large": "xl",
-      "xxlarge": "xxl",
+      "large": "l",
+      "medium": "m",
+      "xxlarge": "2xl",
+      "2x-large": "2xl",
+      "xxl": "2xl",
+      "xxs": "2xs",
       "xsmall": "xs",
-
-      "10(m)": "10_m_"
+      "extralarge": "xl",
+      "extrasmall": "xs"
     }
   },
 
 
   "ColorConverter": {
-    "IsEnabled": false,
+    "IsEnabled": true,
     "DeleteAllFColours": false,
 
     "SaveResult": true,
@@ -137,7 +144,27 @@
     "UnknownFile": "results/unknownColors.txt",
     "ResultFile": "results/convertedColors.txt",
 
-    "FColours": [ "one color", "black", "white", "grey", "gold", "brown", "pink", "beige", "blue", "silver", "red", "green", "yellow" ],
+    "FColours": [
+      "one color",
+      "black",
+      "white",
+      "grey",
+      "gold",
+      "brown",
+      "pink",
+      "beige",
+      "silver",
+      "red",
+      "green",
+      "yellow",
+      "olive",
+      "orange",
+      "burgundy",
+      "light",
+      "blue",
+      "nude",
+      "purple"
+    ],
 
     "DirectMapping": {
       "Black Floral": "Black",
@@ -147,9 +174,32 @@
       "coffee": "black",
       "aqua": "blue",
       "gray": "grey",
-      "ivory": "white"
+      "ivory": "white",
+      "navy": "blue",
+      "tortoise": "Brown,Olive,Green,Grey",
+      "chestnut": "brown",
+
+      "peach": "Orange",
+      "mustard": "Yellow",
+      "chestnut aura": "Brown",
+      "ruby wine": "Burgundy, Red",
+
+
+      "tomato": "Red",
+      "vintage navy": "Blue",
+      "bamboo": "Brown, Beige",
+      "kale": "Olive, Green",
+      "camel": "Brown, Yellow, Beige",
+      "coral": "Rose, Red, Orange, Nude",
+      "palm": "Green, Olive",
+      "moss palm": "Green, Olive",
+      "salt coffee": "Brown",
+      "salt slate": "Rose, Pink, White",
+      "salt turquoise": "Light Blue",
+      "canary": "Yellow, Nude, Beige, Orange"
+
     }
   }
 
 
-  }
+}
