--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -124,13 +124,14 @@
       "x-large": "xl",
       "large": "l",
       "medium": "m",
-      "xxlarge": "2xl",
-      "2x-large": "2xl",
-      "xxl": "2xl",
-      "xxs": "2xs",
+      "xxlarge": "xxl",
+      "2x-large": "xxl",
+      "2xl": "xxl",
+      "2xs": "xxs",
       "xsmall": "xs",
-      "extralarge": "xl",
-      "extrasmall": "xs"
+      "small": "s",
+      "extra large": "xl",
+      "extra small": "xs"
     }
   },
 
