--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -39,8 +39,8 @@
         [ "l", "us14", "uk18", "eur46" ],
         [ "xl", "us16", "uk20", "eur48" ],
         [ "xl", "us18", "uk22", "eur50" ],
-        [ "xxl", "us20", "uk24", "eur52" ],
-        [ "xxl", "us22", "uk26", "eur54" ]
+        [ "2xl", "us20", "uk24", "eur52" ],
+        [ "2xl", "us22", "uk26", "eur54" ]
       ],
 
       "women_shoes": [
@@ -73,8 +73,8 @@
         [ "l", "us14", "uk16", "eur44" ],
         [ "xl", "us16", "uk18", "eur46" ],
         [ "xl", "us18", "uk20", "eur48" ],
-        [ "xxl", "us20", "uk22", "eur50" ],
-        [ "xxl", "us22", "uk24", "eur52" ]
+        [ "2xl", "us20", "uk22", "eur50" ],
+        [ "2xl", "us22", "uk24", "eur52" ]
       ],
 
       "bra_sizes": [
@@ -124,20 +124,31 @@
       "x-large": "xl",
       "large": "l",
       "medium": "m",
-      "xxlarge": "xxl",
-      "2x-large": "xxl",
-      "2xl": "xxl",
-      "2xs": "xxs",
+      "xxlarge": "2xl",
+      "2x-large": "2xl",
+      "xxl": "2xl",
+      "xxs": "2xs",
       "xsmall": "xs",
       "small": "s",
       "extra large": "xl",
-      "extra small": "xs"
+      "extra small": "xs",
+      "06 (xs)": "xs",
+      "08 (s)": "s",
+      "10 (m)": "m",
+      "10xl": "xl",
+      "12 (l)": "l",
+      "12xl": "xl",
+      "12xxl": "2xl",
+      "14 (xl)": "xl",
+      "size 10 - m": "m",
+      "size 6 - xs": "xs",
+      "size 8 - s": "s"
     }
   },
 
 
   "ColorConverter": {
-    "IsEnabled": true,
+    "IsEnabled": false,
     "DeleteAllFColours": false,
 
     "SaveResult": true,
