--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -120,12 +120,13 @@
     ],
 
     "DirectMapping": {
+      "one size fits all": "one size",
       "one size": "one size",
       "x-large": "xl",
       "large": "l",
       "medium": "m",
       "xxlarge": "2xl",
-      "2x-large": "2xl",
+      "2x - large": "2xl",
       "xxl": "2xl",
       "xxs": "2xs",
       "xsmall": "xs",
@@ -142,8 +143,57 @@
       "14 (xl)": "xl",
       "size 10 - m": "m",
       "size 6 - xs": "xs",
-      "size 8 - s": "s"
-    }
+      "size 8 - s": "s",
+      "eu36": "eur36",
+      "eu37": "eur37",
+      "eu38": "eur39",
+      "eu39": "eur39",
+      "eu40": "eur40",
+      "eu41": "eur41",
+      "35 eu": "eur35",
+      "36 eu": "eur36",
+      "37 eu": "eur37",
+      "38 eu": "eur38",
+      "39 eu": "eur39",
+      "40 eu": "eur40"
+    },
+
+
+    "Ignore": [
+      "1moon",
+      "1star",
+      "2 moons",
+      "2 stars",
+      "1 moon/1 star",
+      "aqua",
+      "chestnut",
+      "cognac",
+      "queen",
+      "queen size",
+      "vintage navy",
+      "vintage tomato",
+      "08-sep",
+      "11-dec",
+      "12oz",
+      "20\"x20\"",
+      "24\"",
+      "26\"",
+      "28\"",
+      "6.75\"",
+      "8.5\"",
+      "49-19-140",
+      "51-17 145",
+      "52-16 140",
+      "52-20 145",
+      "53-16 140",
+      "54-17 145",
+      "55-16 135",
+      "55-16 140",
+      "56-14 140",
+      "58-14 135",
+      "61-15 130",
+      "8oz"
+    ]
   },
 
 
