конвертация размеров и цветов исправления

--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -29,77 +29,77 @@
     "SizeCharts": {
 
       "women_clothes": [
-        [ "xs", "us1", "uk4", "eur32" ],
-        [ "xs", "us2", "uk6", "eur34" ],
-        [ "s", "us4", "uk8", "eur36" ],
-        [ "s", "us6", "uk10", "eur38" ],
-        [ "m", "us8", "uk12", "eur40" ],
-        [ "m", "us10", "uk14", "eur42" ],
-        [ "l", "us12", "uk16", "eur44" ],
-        [ "l", "us14", "uk18", "eur46" ],
-        [ "xl", "us16", "uk20", "eur48" ],
-        [ "xl", "us18", "uk22", "eur50" ],
-        [ "2xl", "us20", "uk24", "eur52" ],
-        [ "2xl", "us22", "uk26", "eur54" ]
+        [ "xs", "us1", "uk4", "eu32" ],
+        [ "xs", "us2", "uk6", "eu34" ],
+        [ "s", "us4", "uk8", "eu36" ],
+        [ "s", "us6", "uk10", "eu38" ],
+        [ "m", "us8", "uk12", "eu40" ],
+        [ "m", "us10", "uk14", "eu42" ],
+        [ "l", "us12", "uk16", "eu44" ],
+        [ "l", "us14", "uk18", "eu46" ],
+        [ "xl", "us16", "uk20", "eu48" ],
+        [ "xl", "us18", "uk22", "eu50" ],
+        [ "2xl", "us20", "uk24", "eu52" ],
+        [ "2xl", "us22", "uk26", "eu54" ]
       ],
 
       "women_shoes": [
-        [ "us4", "uk 2", "eur 35" ],
-        [ "us4.5", "uk2.5", "eur35" ],
-        [ "us5", "uk3", "eur35-36" ],
-        [ "us5.5", "uk3.5", "eur36" ],
-        [ "us6", "uk4", "eur36-37" ],
-        [ "us6.5", "uk4.5", "eur37" ],
-        [ "us7", "uk5", "eur37-38" ],
-        [ "us7.5", "uk5.5", "eur38" ],
-        [ "us8", "uk6", "eur38-39" ],
-        [ "us8.5", "uk6.5", "eur39" ],
-        [ "us9", "uk7", "eur39-40" ],
-        [ "us9.5", "uk7.5", "eur40" ],
-        [ "us10", "uk8", "eur40-41" ],
-        [ "us10.5", "uk8.5", "eur41" ],
-        [ "us11", "uk9", "eur41-42" ],
-        [ "us11", "uk9.5", "eur42" ]
+        [ "us4", "uk 2", "eu35" ],
+        [ "us4.5", "uk2.5", "eu35" ],
+        [ "us5", "uk3", "eu35-36" ],
+        [ "us5.5", "uk3.5", "eu36" ],
+        [ "us6", "uk4", "eu36-37" ],
+        [ "us6.5", "uk4.5", "eu37" ],
+        [ "us7", "uk5", "eu37-38" ],
+        [ "us7.5", "uk5.5", "eu38" ],
+        [ "us8", "uk6", "eu38-39" ],
+        [ "us8.5", "uk6.5", "eu39" ],
+        [ "us9", "uk7", "eu39-40" ],
+        [ "us9.5", "uk7.5", "eu40" ],
+        [ "us10", "uk8", "eu40-41" ],
+        [ "us10.5", "uk8.5", "eu41" ],
+        [ "us11", "uk9", "eu41-42" ],
+        [ "us11", "uk9.5", "eu42" ]
       ],
 
       "women_jeans": [
-        [ "xs", "us0", "uk2", "eur30" ],
-        [ "xs", "us2", "uk4", "eur32" ],
-        [ "s", "us4", "uk6", "eur34" ],
-        [ "s", "us6", "uk8", "eur36" ],
-        [ "m", "us8", "uk10", "eur38" ],
-        [ "m", "us10", "uk12", "eur40" ],
-        [ "l", "us12", "uk14", "eur42" ],
-        [ "l", "us14", "uk16", "eur44" ],
-        [ "xl", "us16", "uk18", "eur46" ],
-        [ "xl", "us18", "uk20", "eur48" ],
-        [ "2xl", "us20", "uk22", "eur50" ],
-        [ "2xl", "us22", "uk24", "eur52" ]
+        [ "xs", "us0", "uk2", "eu30" ],
+        [ "xs", "us2", "uk4", "eu32" ],
+        [ "s", "us4", "uk6", "eu34" ],
+        [ "s", "us6", "uk8", "eu36" ],
+        [ "m", "us8", "uk10", "eu38" ],
+        [ "m", "us10", "uk12", "eu40" ],
+        [ "l", "us12", "uk14", "eu42" ],
+        [ "l", "us14", "uk16", "eu44" ],
+        [ "xl", "us16", "uk18", "eu46" ],
+        [ "xl", "us18", "uk20", "eu48" ],
+        [ "2xl", "us20", "uk22", "eu50" ],
+        [ "2xl", "us22", "uk24", "eu52" ]
       ],
 
       "bra_sizes": [
-        [ "us28", "uk28", "eur60" ],
-        [ "us30", "uk30", "eur65" ],
-        [ "us32", "uk32", "eur70" ],
-        [ "us34", "uk34", "eur75" ],
-        [ "us36", "uk36", "eur80" ],
-        [ "us38", "uk38", "eur85" ],
-        [ "us40", "uk40", "eur90" ],
-        [ "us42", "uk42", "eur95" ],
-        [ "us44", "uk44", "eur100" ],
-        [ "us46", "uk46", "eur105" ],
-        [ "us48", "uk48", "eur110" ],
-        [ "us50", "uk50", "eur115" ]
+        [ "us28", "uk28", "eu60" ],
+        [ "us30", "uk30", "eu65" ],
+        [ "us32", "uk32", "eu70" ],
+        [ "us34", "uk34", "eu75" ],
+        [ "us36", "uk36", "eu80" ],
+        [ "us38", "uk38", "eu85" ],
+        [ "us40", "uk40", "eu90" ],
+        [ "us42", "uk42", "eu95" ],
+        [ "us44", "uk44", "eu100" ],
+        [ "us46", "uk46", "eu105" ],
+        [ "us48", "uk48", "eu110" ],
+        [ "us50", "uk50", "eu115" ]
 
       ],
 
       "cup_sizes": [
-        [ "usAA", "ukAA", "eurAA" ],
-        [ "usA", "ukA", "eurA" ],
-        [ "usB", "ukB", "eurB" ],
-        [ "usC", "ukC", "eurD" ],
-        [ "usDD", "ukDD", "eurE" ],
-        [ "usE", "ukE", "eurF" ]
+        [ "usAA", "ukAA", "euAA" ],
+        [ "usA", "ukA", "euA" ],
+        [ "usB", "ukB", "euB" ],
+        [ "usC", "ukC", "euD" ],
+        [ "usDD", "ukDD", "euE" ],
+        [ "usE", "ukE", "euF" ]
       ]
     },
 
@@ -144,20 +144,17 @@
       "size 10 - m": "m",
       "size 6 - xs": "xs",
       "size 8 - s": "s",
-      "eu36": "eur36",
-      "eu37": "eur37",
-      "eu38": "eur39",
-      "eu39": "eur39",
-      "eu40": "eur40",
-      "eu41": "eur41",
-      "35 eu": "eur35",
-      "36 eu": "eur36",
-      "37 eu": "eur37",
-      "38 eu": "eur38",
-      "39 eu": "eur39",
-      "40 eu": "eur40"
+      "35 eu": "eu35",
+      "36 eu": "eu36",
+      "37 eu": "eu37",
+      "38 eu": "eu38",
+      "39 eu": "eu39",
+      "40 eu": "eu40",
+      "41 eu": "eu41",
+      "size 6": "6",
+      "size 7": "7",
+      "size 8": "8"
     },
-
 
     "Ignore": [
       "1moon",
@@ -175,6 +172,7 @@
       "08-sep",
       "11-dec",
       "12oz",
+      "8oz",
       "20\"x20\"",
       "24\"",
       "26\"",
@@ -192,7 +190,7 @@
       "56-14 140",
       "58-14 135",
       "61-15 130",
-      "8oz"
+      "m-l-xl"
     ]
   },
 
@@ -225,40 +223,64 @@
       "light",
       "blue",
       "nude",
-      "purple"
+      "purple",
+      "Light Blue"
     ],
 
     "DirectMapping": {
-      "Black Floral": "Black",
-      "Black white": "black,white",
-      "cognac": "brown",
-      "charcoal": "black",
-      "coffee": "black",
       "aqua": "blue",
-      "gray": "grey",
-      "ivory": "white",
-      "navy": "blue",
-      "tortoise": "Brown,Olive,Green,Grey",
-      "chestnut": "brown",
-
-      "peach": "Orange",
-      "mustard": "Yellow",
-      "chestnut aura": "Brown",
-      "ruby wine": "Burgundy, Red",
-
-
-      "tomato": "Red",
-      "vintage navy": "Blue",
       "bamboo": "Brown, Beige",
-      "kale": "Olive, Green",
+      "bronze": "Brown, Gold",
+      "burgundy": "Burgundy, Red",
       "camel": "Brown, Yellow, Beige",
+      "cameo rose": "Rose, Pink",
+      "canary": "Yellow, Nude, Beige, Orange",
+      "caramel": "Orange, Beige, Brown",
+      "charcoal": "black",
+      "chestnut aura": "Brown",
+      "chestnut": "brown",
+      "clear - peach": "Orange, Yellow",
+      "clear frame - violet lens": "White",
+      "clear": "White",
+      "coffee": "black",
+      "cognac": "brown",
+      "cooper": "Brown",
       "coral": "Rose, Red, Orange, Nude",
-      "palm": "Green, Olive",
+      "fog": "Grey, Black",
+      "fuschia": "Pink, Purple, Red",
+      "gray": "grey",
+      "gun/rose": "Rose, Pink",
+      "ivory": "white",
+      "kale": "Olive, Green",
+      "leopard": "Black, Brown, Gold, Orange",
+      "macaw": "Blue, Light Blue, Green, Yellow",
+      "mint": "Light Blue, Green",
       "moss palm": "Green, Olive",
+      "mustard": "Yellow",
+      "navy": "blue",
+      "olive": "Olive",
+      "onyx": "Blue, Light Blue, White",
+      "orange": "Orange",
+      "palm": "Green, Olive",
+      "peach": "Orange, Rose, Pink",
+      "rose": "Rose, Pink",
+      "ruby wine": "Burgundy, Red",
+      "sage": "Grey, Green",
       "salt coffee": "Brown",
       "salt slate": "Rose, Pink, White",
       "salt turquoise": "Light Blue",
-      "canary": "Yellow, Nude, Beige, Orange"
+      "sand": "Brown, Beige",
+      "tan": "Beige, Brown",
+      "taupe": "Brown, Grey",
+      "teal": "Blue, Green, Light Blue",
+      "toast": "Beige, Rose, Yellow",
+      "tomato": "Red",
+      "tortoise - amber": "Brown",
+      "tortoise": "Brown,Olive,Green,Grey",
+      "turquoise snake": "Light Blue",
+      "turquoise": "Light Blue",
+      "victorian rose": "Rose, Pink, Red",
+      "vintage navy": "Blue"
 
     }
   }
