--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -18,7 +18,7 @@
 
 
   "SizeConverter": {
-    "IsEnabled": true,
+    "IsEnabled": false,
     "DeleteAllFSizes": true,
 
     "SaveResult": true,
@@ -196,10 +196,10 @@
 
 
   "ColorConverter": {
-    "IsEnabled": false,
+    "IsEnabled": true,
     "DeleteAllFColours": false,
 
-    "SaveResult": true,
+    "SaveResult": false,
 
     "UnknownFile": "results/unknownColors.txt",
     "ResultFile": "results/convertedColors.txt",
@@ -280,7 +280,74 @@
       "turquoise snake": "Light Blue",
       "turquoise": "Light Blue",
       "victorian rose": "Rose, Pink, Red",
-      "vintage navy": "Blue"
+      "vintage navy": "Blue",
+
+      "amethyst": "Purple",
+      "aqua ombre": "Blue, Light Blue, Green",
+      "aquamarine": "Blue, Light Blue",
+      "blanco": "White",
+      "blonde": "Yellow, Orange, Gold",
+      "blush": "Rose, Nude, Beige, Pink",
+      "brass": "Brown, Gold",
+      "brazilian": "Green, Blue",
+      "burg": "Black",
+      "carbon": "Grey, Black",
+      "champagne": "Nude, Beige",
+      "chestnut coffee ombre": "Brown, Beige, Black",
+      "chocolate": "Brown, Beige",
+      "clear frame - peach lens": "White, Orange",
+      "coffee ombre": "Brown, Black, Beige, Gold",
+      "cream": "White, Nude, Beige, Yellow",
+      "denim": "Blue, Light Blue",
+      "dove taupe": "Rose, Nude",
+      "emerald": "Green",
+      "fawn": "Brown, Beige",
+      "flame": "Red, Burgundy",
+      "floral shimmer": "Grey, White, Black",
+      "gray trio": "Grey, Black",
+      "gunmetal - gray": "Grey, Black",
+      "gunmetal foil": "Blue",
+      "gunmetal": "Grey, Black",
+      "herringbone sartorial": "Grey, Blue",
+      "ice": "White, Light Blue",
+      "indian summer": "Orange, Gold, Yellow",
+      "khaki": "Beige, Brown",
+      "lavender": "Purple, Blue, Light Blue",
+      "lilac": "Blue, Purple",
+      "liquid forest": "Black, Blue",
+      "maltese tiger": "Black, Blue",
+      "maroon": "Red, Rose, Burgundy",
+      "mink": "Grey, Purple",
+      "multi": "Blue, Green, Red, Yellow",
+      "multicolor": "Blue, Green, Red, Yellow",
+      "natural": "Beige, Nude, White",
+      "navy + mustard": "Blue, Yellow, Orange",
+      "orchid": "White, Nude, Beige",
+      "pearl": "White, Nude",
+      "peridot": "Green",
+      "pine": "Brown, Green",
+      "platinum/ berry/ onyx": "Black, Grey, Red, Burgundy",
+      "platinum/ cocoa/ champagne": "Black, Brown",
+      "plum": "Purple, Burgundy",
+      "prism print": "Blue, Green, Black",
+      "quartz": "Rose, Pink, Red",
+      "rainbow": "Light Blue, Blue, Turquoise",
+      "raspberry": "Red, Rose, Pink",
+      "rose quartz": "Rose, Pink, Red",
+      "rose slate": "Rose, Pink, Nude",
+      "ruby kiss": "Red, Rose, Purple, Burgundy",
+      "ruby": "Red, Burgundy",
+      "rust": "Red, Burgundy",
+      "smoke": "Grey, Black,White",
+      "snake": "Brown, Beige, Black",
+      "summer": "Blue, Green, White, Red, Yellow",
+      "tan / blonde": "Brown, Beige, Gold",
+      "tan ostrich": "Brown, Beige",
+      "teal/cream": "Blue, Green",
+      "tortoise frame - amber lens": "Brown",
+      "vintage tomato": "Red, Burgundy",
+      "violet": "Purple, Burgundy",
+      "wine": "Red, Burgundy"
 
     }
   }
